<resources>
    <string name="app_name">Tickets App</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="tickets">Авиабилеты</string>
    <string name="hotels">Отели</string>
    <string name="shorter">Короче</string>
    <string name="subscriptions">Подписки</string>
    <string name="profile">Профиль</string>
    <string name="find_cheap_tickets">Поиск дешевых авиабилетов</string>
    <string name="default_start_point">Откуда - Москва</string>
    <string name="default_end_point">Куда - Турция</string>
    <string name="top_music">Музыкально отлететь</string>
    <string name="complex_route">Сложный маршрут</string>
    <string name="anywhere">Куда угодно</string>
    <string name="weekends">Выходные</string>
    <string name="hot_tickets">Горячие билеты</string>
    <string name="istanbul">Стамбул</string>
    <string name="popular_direction">Популярное направление</string>
    <string name="sochi">Сочи</string>
    <string name="phuket">Пхукет</string>
    <string name="back">обратно</string>
    <string name="passenger_info">1,эконом</string>
    <string name="filters">Фильтры</string>
    <string name="direct_flights">Прямые рейсы</string>
    <string name="empty_list">Список рейсов пуст</string>
    <string name="show_all">Показать все</string>
    <string name="see_all_tickets">Посмотреть все билеты</string>
    <string name="price_notifications">Подписка на цену</string>
    <string name="filter">Фильтр</string>
    <string name="price_chart">График цен</string>
    <string name="ticket_cost">от %1$s ₽</string>
    <string name="price">%1$s ₽</string>
    <string name="dateFormat">, %1$s</string>
    <string name="subscribed">Вы подписались</string>
    <string name="unsubscribed">Вы отписались</string>
    <string name="travel_length">%1$sч в пути </string>
    <string name="has_no_transfer"> Без пересадок</string>
    <string name="destinations">%1$s-%2$s</string>
    <string name="date_params">%1$s, 1 пассажир</string>
</resources>