<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@color/black"
    tools:context=".ui.fragments.TicketsStartFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:gravity="center"
            android:maxWidth="172dp"
            android:text="@string/find_cheap_tickets"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Title1"
            android:textColor="#D9D9D9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/from_where_card"
            android:layout_width="match_parent"
            android:layout_height="122dp"
            android:layout_marginHorizontal="@dimen/big"
            app:cardBackgroundColor="@color/grey3"
            app:cardCornerRadius="@dimen/corner_radius"
            app:layout_constraintTop_toBottomOf="@+id/title">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/big"
                app:cardBackgroundColor="@color/grey4"
                app:cardCornerRadius="@dimen/corner_radius"
                app:cardElevation="@dimen/normal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/search_icon"
                        android:layout_width="@dimen/big_icon_size"
                        android:layout_height="@dimen/big_icon_size"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/normal"
                        android:src="@drawable/search_icon"
                        app:tint="@color/black" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/big"
                        android:layout_marginEnd="@dimen/big"
                        android:orientation="vertical">


                        <EditText
                            android:id="@+id/start_point"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/big"
                            android:autofillHints="@null"
                            android:background="@null"
                            android:hint="@string/default_start_point"
                            android:inputType="text"
                            android:singleLine="true"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.ButtonText"
                            android:textColor="@color/white"
                            android:textColorHint="@color/grey6" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/nano"
                            android:layout_marginVertical="@dimen/normal"
                            android:background="@color/grey5" />

                        <TextView
                            android:id="@+id/end_point"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:autofillHints="@null"
                            android:background="@null"
                            android:hint="@string/default_end_point"
                            android:singleLine="true"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.ButtonText"
                            android:textColorHint="@color/grey6" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/section_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/big"
            android:layout_marginTop="@dimen/large"
            android:text="@string/top_music"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Title1"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/from_where_card" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/offers_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@+id/section_title"
            tools:listitem="@layout/offer_item" />

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="@dimen/progressbar_size"
            android:layout_height="@dimen/progressbar_size"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>