<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rounded_top_corners"
    android:backgroundTint="@color/grey2"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <LinearLayout
        android:id="@+id/bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <View
            android:layout_width="38dp"
            android:layout_height="5dp"
            android:layout_marginTop="@dimen/big"
            android:background="@drawable/drag_shape" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:layout_margin="@dimen/big"
            app:cardBackgroundColor="@color/grey3"
            app:cardCornerRadius="@dimen/corner_radius">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/big"
                android:layout_marginEnd="@dimen/big"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/big_icon_size"
                        android:layout_height="@dimen/big_icon_size"
                        android:layout_gravity="center"
                        android:layout_marginEnd="@dimen/small"
                        android:src="@drawable/plane_take_off"
                        app:tint="@color/grey6" />

                    <TextView
                        android:id="@+id/start_point"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:singleLine="true"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.ButtonText"
                        android:textColor="@color/white"
                        tools:text="Минск" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/nano"
                    android:layout_marginVertical="@dimen/normal"
                    android:background="@color/grey5" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/big_icon_size"
                        android:layout_height="@dimen/big_icon_size"
                        android:layout_gravity="center"
                        android:layout_marginEnd="@dimen/small"
                        android:src="@drawable/search_icon"
                        app:tint="@color/white" />

                    <EditText
                        android:id="@+id/end_point"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@null"
                        android:hint="@string/default_end_point"
                        android:imeOptions="actionSend"
                        android:inputType="text"
                        android:singleLine="true"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.ButtonText"
                        android:textColor="@color/white"
                        android:textColorHint="@color/grey6" />

                    <ImageView
                        android:id="@+id/clear"
                        android:layout_width="@dimen/big_icon_size"
                        android:layout_height="@dimen/big_icon_size"
                        android:layout_gravity="center"
                        android:src="@drawable/cross"
                        app:tint="@color/white" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="@dimen/extra_big"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/complex_route"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@drawable/rounded_all_corners"
                    android:backgroundTint="@color/green"
                    android:contentDescription="@null"
                    android:padding="@dimen/extra"
                    android:src="@drawable/complex_route" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/normal"
                    android:maxWidth="80dp"
                    android:text="@string/complex_route"
                    android:textAlignment="center"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Text2"
                    android:textColor="@color/white" />
            </LinearLayout>

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <LinearLayout
                android:id="@+id/anywhere"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@drawable/rounded_all_corners"
                    android:backgroundTint="@color/blue"
                    android:contentDescription="@null"
                    android:padding="@dimen/extra"
                    android:src="@drawable/globe" />

                <TextView
                    android:id="@+id/anywhere_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/normal"
                    android:maxWidth="80dp"
                    android:text="@string/anywhere"
                    android:textAlignment="center"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Text2"
                    android:textColor="@color/white" />
            </LinearLayout>

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <LinearLayout
                android:id="@+id/weekend"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@drawable/rounded_all_corners"
                    android:backgroundTint="@color/dark_blue"
                    android:contentDescription="@null"
                    android:padding="@dimen/extra"
                    android:src="@drawable/calendar" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/normal"
                    android:maxWidth="80dp"
                    android:text="@string/weekends"
                    android:textAlignment="center"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Text2"
                    android:textColor="@color/white" />
            </LinearLayout>

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <LinearLayout
                android:id="@+id/hot_tickets"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@drawable/rounded_all_corners"
                    android:backgroundTint="@color/red"
                    android:contentDescription="@null"
                    android:padding="@dimen/extra"
                    android:src="@drawable/hot_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/normal"
                    android:maxWidth="80dp"
                    android:text="@string/hot_tickets"
                    android:textAlignment="center"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Text2"
                    android:textColor="@color/white" />
            </LinearLayout>


        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/big"
            android:layout_marginTop="@dimen/large"
            android:orientation="vertical"
            app:cardBackgroundColor="@color/grey3"
            app:cardCornerRadius="@dimen/big">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/big"
                android:layout_marginTop="@dimen/big"
                android:layout_marginBottom="@dimen/normal"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/istanbul"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:orientation="horizontal">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="@dimen/normal"
                        android:adjustViewBounds="true"
                        android:contentDescription="@null"
                        android:scaleType="centerCrop"
                        android:src="@drawable/stambul_image"
                        app:shapeAppearanceOverlay="@style/TravelImage" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/normal"
                        android:orientation="vertical">


                        <TextView
                            android:id="@+id/istanbul_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/normal"
                            android:background="@null"
                            android:singleLine="true"
                            android:text="@string/istanbul"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Title3"
                            android:textColor="@color/white" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:hint="@string/popular_direction"
                            android:singleLine="true"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Text2"
                            android:textColor="@color/white"
                            android:textColorHint="@color/grey5" />

                    </LinearLayout>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/nano"
                    android:layout_marginBottom="@dimen/normal"
                    android:background="@color/grey5" />

                <LinearLayout
                    android:id="@+id/sochi"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:orientation="horizontal">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="@dimen/normal"
                        android:adjustViewBounds="true"
                        android:contentDescription="@null"
                        android:scaleType="centerCrop"
                        android:src="@drawable/sochi_image"
                        app:shapeAppearanceOverlay="@style/TravelImage" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/normal"
                        android:orientation="vertical">


                        <TextView
                            android:id="@+id/sochi_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/normal"
                            android:background="@null"
                            android:singleLine="true"
                            android:text="@string/sochi"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Title3"
                            android:textColor="@color/white" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:hint="@string/popular_direction"
                            android:singleLine="true"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Text2"
                            android:textColor="@color/white"
                            android:textColorHint="@color/grey5" />

                    </LinearLayout>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/nano"
                    android:layout_marginBottom="@dimen/normal"
                    android:background="@color/grey5" />

                <LinearLayout
                    android:id="@+id/phuket"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:orientation="horizontal">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="@dimen/normal"
                        android:adjustViewBounds="true"
                        android:contentDescription="@null"
                        android:scaleType="centerCrop"
                        android:src="@drawable/phuket_image"
                        app:shapeAppearanceOverlay="@style/TravelImage" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/normal"
                        android:orientation="vertical">


                        <TextView
                            android:id="@+id/phuket_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/normal"
                            android:background="@null"
                            android:singleLine="true"
                            android:text="@string/phuket"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Title3"
                            android:textColor="@color/white" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:hint="@string/popular_direction"
                            android:singleLine="true"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Text2"
                            android:textColor="@color/white"
                            android:textColorHint="@color/grey5" />

                    </LinearLayout>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/nano"
                    android:layout_marginBottom="@dimen/normal"
                    android:background="@color/grey5" />
            </LinearLayout>


        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>